feat(SAMS-39): add remaining module content
Not complete or finalized yet, but more that we can work with

--- a/src/modules/01.md
+++ b/src/modules/01.md
@@ -6,15 +6,25 @@ hero_image_alt: Menschen, die sich an den Händen fassen und Objekte austauschen
 example: Sicher kennen viele Menschen das Bild einer Behörden, die der angebotenen Dienstleistung mit Hinweisen in Text und Bild, Türschildern und laminierten Informationen auf die Sprünge helfen muss. Diese besagen, welchen Weg man zu gehen hat, wann man wo klopfen darf, welche Unterlagen bereitgehalten werden müssen, womit man hier völlig falsch ist. Das alles sind Beweise für eine schlecht organisierte Dienstleistung. Ihre Schwachstellen erzeugt Stress bei Mitarbeiter:innen, die offensichtlich stets ähnliche “unangebrachte” Fragen beantworten müssen und “falsches” Verhalten ihrer Nutzer:innen zu verhindern suchen. Das Problem ist, dass der “Fehler” auch nicht bei den Nutzer:innen liegt, sondern im Service selbst - dort aber selten gesucht wird.
 example_image_url: /assets/images/modules/01_example.png
 example_image_alt: Drei Hände und ein Smartphone
+methods:
+  - 
+    title: Customer Journey
+    abstract:
+    description: 'Im ersten Modul arbeiten wir mit der Methode Customer Journey. Sie ermöglicht eine systematische Aufteilung einer Dienstleistung in ihre einzelnen Prozessschritte. Diese werden dann durch eigenes "Erleben" des Prozesses analysiert und bewertet: Wo liegen Schwachstellen und Hürden? Was funktioniert gut? Die gewonnenen Erkenntnisse sind erste Grundlagen zur Neugestaltung oder Überarbeitung des Service. Weitere Informationen finden Sie im entsprechenden Download.'
+    doc_path: fill-me-in # TODO: fill it
 further_reading:
   - 
-    title: title
-    description: description
-    link: link
+    title: Bürokratieabbau durch Digitalisierung
+    description: Gutachten Öffentliche IT und Fraunhofer
+    link: https://www.normenkontrollrat.bund.de/resource/blob/300864/753834/ea4c588fa9edf79304d947baf766e624/2015-11-12-gutachten-egov-2015-dokumentation-data.pdf?download=1
   - 
-    title: another title
-    description: another description
-    link: another link
+    title: Zufriedenheit mit behördlichen Leistungen
+    description: Befragung des Statistischen Bundesamts 2019
+    link: https://www.amtlich-einfach.de/SharedDocs/Downloads/Ergebnisse_Buerger_2019.pdf?__blob=publicationFile&v=2
+  - 
+    title: Was ist eigentlich Service Design Thinking?
+    description: Einführender Artikel zum Thema
+    link: https://verwaltungsrebellen.de/was-ist-eigentlich-service-design-thinking/
 ---
 
 Die Entwicklung von Prozessen und Produkten - im Fall von Verwaltung sind das Formulare, Räume der Interaktion oder auch digitale Anwendungen - erfolgt konsequent aus der Perspektive von Nutzer:innen. Nur so ist gewährleistet, dass ein Angebot wirklich die Bedürfnisse, Hürden und individuellen Voraussetzungen der Zielgruppen trifft und das Angebot zu einem "Erfolg" macht. Anders als im privatwirtschaftlichen Bereich sprechen wir natürlich nicht von Gewinnmaximierung, durchaus aber von Kostenersparnis durch bessere Angebote. Mehrere Studien belegen, dass "schlechte" Services - unverständliche Formulare, fehlende Unterlagen, auch verärgerte und frustrierte Bürger:innen - personelle und materielle Ressourcen binden und damit Mehrkosten erzeugen. Auf die Nutzer:innen abgestimmte Angebote reduzieren dagegen den Stress für Mitarbeiter:innen der Verwaltung und bringen sie in die Position hilfreiche Gestalter:innen und nicht "nur" Verwalter:innen sein zu müssen.
