--- a/src/modules/04.md
+++ b/src/modules/04.md
@@ -1,8 +1,18 @@
 ---
 title: Nutzer:innenbefragung
 abstract: Wir sprechen in Kürze über die Hemmungen und die fehlenden Rahmenbedingungen zur Durchführung von Nutzer:innenbefragung - und den Ertrag, den sie erbringen können.
+example: "Während eines Service Design Prozesses mit dem zahnärztlichen Dienst Berlin Neukölln wurden die Schüler:innen, die diese Dienstleistung durchlaufen haben, zu ihrer Erfahrung befragt. Mit Hilfe von Bildmaterial gaben sie in ihren Worten einzelne Aktionen im Service wieder. Als O-Töne wurden dies wiederum den MitarbeiterInnen des Zahnärztlichen Dienstes zurückgespiegelt. Dies entspricht in keiner Weise einer breit angelegten Erhebung oder quantitativen Befragung - dennoch hat es großen Effekt. Nur wenige, aber “echte”, Stimmen haben bereits eine völlig neue Perspektive auf den Service mit sich gebracht und dafür sensibilisiert, dass die eigenen Annahmen völlig falsch sein können."
 hero_image_url: url
 hero_image_alt: Bild mit Menschen
 example_image_url: url
 example_image_alt: Bild mit irgendwas
 ---
+
+Die Kontaktaufnahme zu NutzerInnen von Verwaltungsleistungen ist ein schier unlösbares Dilemma! Entweder MitarbeiterInnen haben nichts mit externen Nutzer:innen zu tun oder sind auf einer entfernten strategischen Ebene tätig. Diejenigen Mitarbeiter:innen, die eng mit Bürger:innen zusammenarbeiten sind schwer gebeutelt durch Kritik und den stetigen Wunsch nach Kundenorientierung. Man kann sie kaum überzeugen jetzt auch noch Feedback einzuholen.
+Nur - ist das nicht eigentlich in jeder größeren Organisation so?
+
+Privatwirtschaftliche Unternehmen funktionieren in dieser Hinsicht nicht anders als Verwaltungen. Was sie unterscheidet ist der (meist) durch Konkurrenz ausgelöste Druck, sich mit den Bedürfnissen seine:r Kund:innen zu beschäftigen. So wird dem Thema Raum, Personal, Finanzen, die notwendige Kompetenz und die entsprechenden Rahmenbedingungen zur Verfügung gestellt.
+
+Verwaltungsmitarbeiter:innen fühlen sich auf verschiedenen Ebenen vom Thema Nutzer:innenbefragung nicht angesprochen und wissen oftmals nicht, wie sie in die Umsetzung gehen sollen. Auf der strategischen Leitungsebene müssten die Rahmenbedingungen geschaffen und Mittel vergeben werden, auf den unteren Ebenen müssten die Kompetenzen und Möglichkeiten zur nutzerorientierten Befragung und das Know-How zum Aufbau entsprechender Prozesse vermittelt werden. Mitarbeiter:innen im engen Bürgerkontakt müssen durch Schulungen und besser Services (von oben!) ganz einfach entlastet werden.
+
+Befragung kann dabei zahlreiche Formen annehmen und bedeutet im Kern, die echte Auseinandersetzung und das Einholen von Feedback durch NutzerInnen und weitere Beteiligte. Möglich sind Online-Umfragen, persönliche Interviews, Shadowing, Customer Journey, qualitative und quantitative Umfragen. Hilfreich ist es, einen Pool an potenziellen und repräsentativen Tester:innen aufzubauen, da MitarbeiterInnen schlicht nicht wissen, woher sie im Fall der Fälle NutzerInnen holen sollen. Hier müssen Hemmschwellen abgebaut und positive Erlebnisse geschaffen werden.
