--- a/src/modules/08.md
+++ b/src/modules/08.md
@@ -1,8 +1,20 @@
 ---
 title: Innovationsprojekte präsentieren
 abstract: Wir geben Hinweise, die helfen können Innovationsprojekte in der eigenen Abteilung oder im Team oder “nach oben” zu vermitteln und so den Ansatz des Agilen und nutzerzentrierten Arbeitens zu streuen.
+example: "Im Service Design Prozess des Zahnärztlichen Dienstes Berlin Neukölln bestand die dankbare Möglichkeit, neue Räume zu beziehen und eine “weiße Wand” bespielen zu dürfen. Ein einfaches Architekturmodell und farbige Ausdrucke möglicher Wandbemalungen (es ist eine Dienstleistung für Kinder) half der Umsetzung auf die Sprünge: Das Modell wurde dem Bezirksamt Neukölln gegeben und bis zum Stadtrat “weitergereicht”, der begeistert seine finanzielle Unterstützung zusagte."
 hero_image_url: url
 hero_image_alt: Bild mit Menschen
 example_image_url: url
 example_image_alt: Bild mit irgendwas
 ---
+
+Wir sind am Ende der Module angekommen und gehen nun davon aus, dass Verwaltungspioniere sich aufgemacht haben, Veränderungen in ihren Abteilungen und Teams herbeizuführen. Sie wollen andere, vielleicht sogar skeptische, Kolleg:innen an ihren Überraschungen und Erfolgen teilhaben lassen und diese wiederum überzeugen Neues auszuprobieren. Wie kann das funktionieren?
+
+**Visualisierung und physische Objekte**
+Es kann helfen, mobile (physische) Objekte zu entwickeln (ein kleines Heft oder ein Architekturmodell) oder Ergebnisse zu visualisieren - als Foto oder Film. So können Ideen und Projekte für sich selbst sprechen, wiederholt und in Ruhe angesehen werden, sie können, im wahrsten SInne des Wortes, in die Führungsetage getragen werden.
+
+**Nutzer:innentests**
+Sammeln Sie Feedback! Der Begriff Nutzer:innentests klingt sehr groß, meint aber im Kern jede mögliche Stimme eines Nutzers (auch eines verwaltungsinternen), die eingeholt werden kann. Jede Person, die ein konstruktives Feedback zum gefundenen Ansatz oder Service machen konnte, die eine Journey durchlief oder auch nur das Shadowing einer einzigen Person ist mehr Feedback als kein Feedback - und daher wertvoll.
+
+**Inspirieren Sie!**
+Neben guten Ergebnissen und effektiven Methoden hat nutzerorientiertes, co-kreatives und agiles Arbeiten den Vorteil, das es Spaß macht. Teilen Sie Ihre Freude und laden Sie so andere ein, Neues zu wagen.
