--- a/src/modules/05.md
+++ b/src/modules/05.md
@@ -1,8 +1,19 @@
 ---
 title: Erfahrungsschatz nutzen, Spielräume erkunden
 abstract: Welche Anlässe gibt es, die dabei helfen können, Verwaltungsmitarbeiter:innen neue oder bisher ungenutzte Spielräume aufzuzeigen und eine Veränderung zu wagen.
+example: "Der Bauhof der Stadt Herrenberg hat mit Hilfe der Hochschule für Öffentliche Verwaltung und Finanzen Ludwigsburg agiles, bürgerzentrietres und selbstverwaltetes Arbeiten eingeführt. In moderierten Verfahren und dank erprobter Methoden sowie der stetigen Evaluation des IST-Zustands konnte dieses für Verwaltung sehr ungewöhnliche Arbeitsprinzip umgesetzt werden. Die Mitarbeiter:innenzufriedenheit ist sehr groß und die neu eingeführten Maßnahmen werden in der Stadtverwaltung weiter ausgeweitet."
 hero_image_url: url
 hero_image_alt: Bild mit Menschen
 example_image_url: url
 example_image_alt: Bild mit irgendwas
 ---
+
+Verwaltung wird sehr oft, auch intern, mit den beiden Klischee-Sätzen “Das haben wir schon immer so gemacht” oder “Das haben wir noch nie so gemacht” in Verbindung gebracht. Beide Sätze spiegeln Haltungen der Unveränderlichkeit wieder. Dem ist natürlich nicht so - schon allein, weil es nicht “die Verwaltung” gibt.
+
+In Modul 5 geht es darum, Verwaltungsmitarbeiter:in dafür zu sensibiliseren ein “Window of Opportunity” in den Blick zu nehmen und am Beispiel erfolgreicher Veränderungsmaßnahmen aus Behörden zu zeigen, wie mit vorhandenen Spielräumen umgegangen werden kann. Dabei lassen sich bei innovativen Projekten in Verwaltung oftmals drei Ursprünge erkennen:
+
+1. Es wird “einfach” gemacht. Durch äußere Umstände, wie etwa die Pandemie, werden neue Rahmenbedingungen erzeugt, die zuvor schwierige Verfahren jetzt ermöglichen. Um bspw. einen Verwaltungsdienst überhaupt noch anbieten zu können, werden bisher ungenutzte Verfahren genutzt oder neue entwickelt.
+2. Veränderungen werden durch externe Stakeholder angestoßen, die mit eigenen Kapazitäten (Personal, Finanzen, Zeit) an Verwaltung herantreten und so Spielräume ermöglichen. Forschungsprojekte oder universitäre Projekte können Expertise von Außen liefern, die Verwaltungen Raum geben, sich neu aufzustellen.
+3. Der politische Wille schafft neue Möglichkeiten durch Verordnungen von oben.
+
+Eine Wahrheit ist natürlich auch: Verwaltung ist eine riesige gewachsene Struktur, die als solche die Tendenz zur Beibehaltung von gegebenen Verfahren hat. Es ist sehr schwierig Verantwortlichkeiten festzulegen und Entscheidungen zu treffen. Viele Entscheidungen haben (gefühlt) weitreichende Konsequenzen und Mitarbeiter:innen fühlen sich eventuell nicht ausreichend geschützt, um Veränderungen einzuführen - und Fehler zu riskieren.
