--- a/src/modules/06.md
+++ b/src/modules/06.md
@@ -1,8 +1,18 @@
 ---
 title: Nutzerzentrierte Sprache
-abstract: Ein kurzer Exkurs zur langen Geschichte und dennoch meist fehlenden Umsetzung der eigentlich so wichtigen nutzerzentrierten Sprache.  
+abstract: Ein kurzer Exkurs zur langen Geschichte und dennoch meist fehlenden Umsetzung der eigentlich so wichtigen nutzerzentrierten Sprache.
+example: "Designer Thomas Weyres hat in einem Vortrag für die re:publica das Hartz IV-Antragsverfahren aufgegriffen und folgende Überlegung angestellt: “Wie sollte ein Antrag aufgebaut und gestaltet sein, der die Bedürfnisse des Antragstellers nach Orientierung, Verständlichkeit und Zeit- und Kosteneffizienz bei der Bearbeitung ernst nimmt – und der den Kontext, aus dem der Antrag gestellt wird, ernst nimmt?” Nachvollziehbar und empathisch gestaltet er das bestehende Antragsverfahren um und präsentiert eine bestechende nutzerfreundliche Alternative."
 hero_image_url: url
 hero_image_alt: Bild mit Menschen
 example_image_url: url
 example_image_alt: Bild mit irgendwas
 ---
+
+Das Thema verständliche Verwaltungssprache ist nicht neu. Die 1781 veröffentlichte Publikation “Über den Kanzleystil und wie derselbe zu verbessern. Etwas für Beamte, Advokaten, Sekretaire, Kanzelisten, Schreiber u.d.gl.” ist eventuell die erste, die dem sogenannten “Beamtendeutsch” etwas entgegensetzen möchte - sicher nicht die letzte. Fakt ist, dass es nicht an Literatur, Ratgebern und ganz klaren Leitfäden für verständliche und nutzerzentrierte Sprache in Verwaltung mangelt. Einer der Hauptkritikpunkte an behördlicher Sprache ist dennoch nach wie vor ihre Unverständlichkeit. 
+Wie lässt sich das erklären?
+
+Zahlreiche Texte in Verwaltung werden von Fachabteilungen und den zuständigen Mitarbeiter:innen erstellt - also Menschen, die aus fachlicher Perspektive auf Kommunikation blicken. Entsprechend liegt der Fokus der Aussage auf der Richtigkeit und Vollständigkeit des behördlichen und juristischen Vorgangs. Es werden “korrekte” statt allgemein gebräuchlicher und verständlicher Begriffe genutzt. So werden “Grundstücksnummerierungen festgesetzt” statt “Hausnummern vergeben”.
+
+“Texten” ist in der freien Wirtschaft eine eigenständige Disziplin. In Verwaltung wird diese Tätigkeit nicht als Profession verstanden, sondern bleibt jeder:m Mitarbeiter:in selbst überlassen. Es erfolgen auch nicht regulär Nutzer:innentests, die Behördensprache auf den Prüfstand stellt. Durch das Fehlen einer professionellen Rahmung der Texterstellung und eines klaren nutzerorientierten Verfahrens steht “Rechtssicherheit” praktisch automatisch an erster Stelle.
+
+Viele Behördenmitarbeiter:innen bedauern das und würden gerne anders kommunizieren. Denn Ihnen ist klar, dass über die sprachliche Darstellung der Verwaltung eine Haltung kommuniziert wird, die tendenziell unfreundlich, mahnend, sogar strafend wahrgenommen wird.
