chore(SAMS-40): use placeholder method PDF in modules

--- a/src/modules/02.md
+++ b/src/modules/02.md
@@ -11,7 +11,7 @@ methods:
     title: Shadowing
     abstract: Methode zur Gewinnung einer weiteren Perspektive auf das Nutzererlebnis
     description: "Das Shadowing ist vergleichbar der Teilnehmenden Beobachtung aus der Soziologie. Ohne Einzugreifen oder zu Kommentieren wird ein Vorgang beobachtet und dokumentiert. Durch die Außenperspektive ist es möglich sehr ganzheitlich auf kleine Reaktionen zu achten: ein Stirnrunzeln, ein Lächeln, ein Zögern. So wird eine sehr differenzierte Analyse eines Service ermöglicht."
-    doc_path: fill-me-in # TODO: fill it
+    doc_path: /assets/docs/AB_Shadowing.pdf
 ---
 
 Was bedeutet “nutzerorientiertes Arbeiten”? Wir haben doch immer die NutzerInnen im Sinn! Dies ist ein gängiges und sicher auch wahres Selbstverständnis bei privaten wie öffentlichen DienstleisterInnen. Doch auch wenn der ernstgemeinte Versuch unternommen wird, sich Nutzerinnen und deren Denk- und Handlungsweisen vorzustellen um einen angebotenen Service in deren Sinne aufzusetzen, entspricht dies leider zumeist nicht deren Verhaltensweisen.
