--- a/src/modules/03.md
+++ b/src/modules/03.md
@@ -11,7 +11,7 @@ methods:
     title: Service Blueprint
     abstract:
     description: "Der Blueprint bildet die Interaktion mit den Nutzer:innen und die Schnittstellen zur Organisation gleichzeitig ab. Dadurch kann die Sichtweise der Nutzer:innen mit der eines Dienstleisters kombiniert dargestellt werden. Neben den Handlungen der Nutzer:innen und der Verwaltungsmitarbeiter:innen, sowie der Berührungspunkte mit einem Service, die wir bereits in der Customer Journey und dem Shadowing ermittelt haben, werden alle “unsichtbaren” Aktivitäten im Hintergrund ergänzt. Dies sind einerseits alle Aktionen, die eine Organisation im Hintergrund durchführt - die Ablage von Informationen - welche für die Nutzer nicht sichtbar sind wie auch unterstützende Prozesse für den Dienstleistungsprozess, zb. eine Terminerinnerung."
-    doc_path: fill-me-in # TODO: fill it
+    doc_path: /assets/docs/AB_Shadowing.pdf # TODO: fill in the real doc
 ---
 
 Die funktionalen und emotionalen Bedürfnisse von Nutzer:innen und Verwaltungsmitarbeiter:innen sind oft recht unterschiedlich - selbst wenn das Bedürfnis nach einem guten Service bei beiden Seiten vorhanden ist. Das ist nicht nur in Verwaltung so, wir erleben das täglich, beispielweise im Supermarkt: Wenn statt des Lieblingsmüslis im Regal nur Leere herrscht, sind wir enttäuscht. Wenn wir uns allerdings durch viele Mitarbeiter:innen mit Rollwägen pressen müssen, die Regale einräumen, sind wir genervt. Wenn unsere Nichte oder unser Bruder am Samstag bis 22.00 Uhr im Supermarkt arbeiten müssen, um die Regale einzuräumen, ohne Kund:innen zu stören, sind wir entrüstet.
