--- a/src/modules/05.md
+++ b/src/modules/05.md
@@ -6,6 +6,12 @@ hero_image_url: url
 hero_image_alt: Bild mit Menschen
 example_image_url: url
 example_image_alt: Bild mit irgendwas
+methods:
+  - 
+    title: Customer Journey # TODO: fill in the real title
+    abstract: # TODO: fill in the real abstract
+    description: 'Im ersten Modul arbeiten wir mit der Methode Customer Journey. Sie ermöglicht eine systematische Aufteilung einer Dienstleistung in ihre einzelnen Prozessschritte. Diese werden dann durch eigenes "Erleben" des Prozesses analysiert und bewertet: Wo liegen Schwachstellen und Hürden? Was funktioniert gut? Die gewonnenen Erkenntnisse sind erste Grundlagen zur Neugestaltung oder Überarbeitung des Service. Weitere Informationen finden Sie im entsprechenden Download.' # TODO: fill in the real description
+    doc_path: /assets/docs/AB_Shadowing.pdf # TODO: fill in the real doc
 ---
 
 Verwaltung wird sehr oft, auch intern, mit den beiden Klischee-Sätzen “Das haben wir schon immer so gemacht” oder “Das haben wir noch nie so gemacht” in Verbindung gebracht. Beide Sätze spiegeln Haltungen der Unveränderlichkeit wieder. Dem ist natürlich nicht so - schon allein, weil es nicht “die Verwaltung” gibt.
