--- a/src/modules/08.md
+++ b/src/modules/08.md
@@ -6,6 +6,12 @@ hero_image_url: url
 hero_image_alt: Bild mit Menschen
 example_image_url: url
 example_image_alt: Bild mit irgendwas
+methods:
+  - 
+    title: Customer Journey # TODO: fill in the real title
+    abstract: # TODO: fill in the real abstract
+    description: 'Im ersten Modul arbeiten wir mit der Methode Customer Journey. Sie ermöglicht eine systematische Aufteilung einer Dienstleistung in ihre einzelnen Prozessschritte. Diese werden dann durch eigenes "Erleben" des Prozesses analysiert und bewertet: Wo liegen Schwachstellen und Hürden? Was funktioniert gut? Die gewonnenen Erkenntnisse sind erste Grundlagen zur Neugestaltung oder Überarbeitung des Service. Weitere Informationen finden Sie im entsprechenden Download.' # TODO: fill in the real description
+    doc_path: /assets/docs/AB_Shadowing.pdf # TODO: fill in the real doc
 ---
 
 Wir sind am Ende der Module angekommen und gehen nun davon aus, dass Verwaltungspioniere sich aufgemacht haben, Veränderungen in ihren Abteilungen und Teams herbeizuführen. Sie wollen andere, vielleicht sogar skeptische, Kolleg:innen an ihren Überraschungen und Erfolgen teilhaben lassen und diese wiederum überzeugen Neues auszuprobieren. Wie kann das funktionieren?
