--- a/src/modules/04.md
+++ b/src/modules/04.md
@@ -6,6 +6,12 @@ hero_image_url: url
 hero_image_alt: Bild mit Menschen
 example_image_url: url
 example_image_alt: Bild mit irgendwas
+methods:
+  - 
+    title: Customer Journey # TODO: fill in the real title
+    abstract: # TODO: fill in the real abstract
+    description: 'Im ersten Modul arbeiten wir mit der Methode Customer Journey. Sie ermöglicht eine systematische Aufteilung einer Dienstleistung in ihre einzelnen Prozessschritte. Diese werden dann durch eigenes "Erleben" des Prozesses analysiert und bewertet: Wo liegen Schwachstellen und Hürden? Was funktioniert gut? Die gewonnenen Erkenntnisse sind erste Grundlagen zur Neugestaltung oder Überarbeitung des Service. Weitere Informationen finden Sie im entsprechenden Download.' # TODO: fill in the real description
+    doc_path: /assets/docs/AB_Shadowing.pdf # TODO: fill in the real doc
 ---
 
 Die Kontaktaufnahme zu NutzerInnen von Verwaltungsleistungen ist ein schier unlösbares Dilemma! Entweder MitarbeiterInnen haben nichts mit externen Nutzer:innen zu tun oder sind auf einer entfernten strategischen Ebene tätig. Diejenigen Mitarbeiter:innen, die eng mit Bürger:innen zusammenarbeiten sind schwer gebeutelt durch Kritik und den stetigen Wunsch nach Kundenorientierung. Man kann sie kaum überzeugen jetzt auch noch Feedback einzuholen.
