--- a/src/modules/07.md
+++ b/src/modules/07.md
@@ -11,7 +11,7 @@ methods:
     title: Papier-Prototyp
     abstract:
     description: "Man benötigt ein A4-Papier, faltet es einmal längs und zweimal quer, so das 6 gleiche Felder entstehen. In jedes Feld zeichnet man einen Rahmen für ein Bild und einige darunter stehende Textzeilen. Ein sogenanntes Storyboard ist entstanden, das die erste Idee zum Ablauf einer Dienstleistung in Bild und Text erfassen kann. Der Vorteil des Storyboards im Vergleich zu einer rein textlichen Beschreibung liegt in der Ergänzung der visuellen Ebene. Sie ist die Hauptebene, der Text ergänzt die Bilder “nur” und ermöglicht so die niedrigschwelligere Dokumentation einer Idee."
-    doc_path: fill-me-in # TODO: fill it
+    doc_path: /assets/docs/AB_Shadowing.pdf # TODO: fill in the real doc
 ---
 
 Auch wenn es seltsam klingt: Oben genannte Prämisse umfasst die Grundidee und auch den Mehrwert von Prototyping. Aber was soll das bedeuten? Ich soll meine:r Chef:in absichtlich schlechte Ideen in Knete präsentieren?
