feat(module-hero): First scaffold for module page hero

--- a/src/modules/01.md
+++ b/src/modules/01.md
@@ -1,5 +1,5 @@
 ---
-title: Service Design und Nutzerorientierung
+title: Service Design und Nutzer&shy;orientierung
 abstract: Service Design erzeugt gute Angebote, die Stress für Mitarbeiter:innen reduzieren, Geld sparen und Ressourcen freisetzen.
 hero_image_url: /assets/images/modules/01_hero.png
 hero_image_alt: Menschen, die sich an den Händen fassen und Objekte austauschen
