feat(module_hero): Add module hero section

--- a/src/modules/01.md
+++ b/src/modules/01.md
@@ -1,4 +1,5 @@
 ---
+module_number: '01'
 title: Service Design und Nutzer&shy;orientierung
 abstract: Service Design erzeugt gute Angebote, die Stress für Mitarbeiter:innen reduzieren, Geld sparen und Ressourcen freisetzen.
 hero_image_url: /assets/images/modules/01_hero.png
