--- a/src/modules/04.md
+++ b/src/modules/04.md
@@ -1,4 +1,5 @@
 ---
+module_number: '04'
 title: Nutzer:innenbefragung
 abstract: Wir sprechen in Kürze über die Hemmungen und die fehlenden Rahmenbedingungen zur Durchführung von Nutzer:innenbefragung - und den Ertrag, den sie erbringen können.
 example: "Während eines Service Design Prozesses mit dem zahnärztlichen Dienst Berlin Neukölln wurden die Schüler:innen, die diese Dienstleistung durchlaufen haben, zu ihrer Erfahrung befragt. Mit Hilfe von Bildmaterial gaben sie in ihren Worten einzelne Aktionen im Service wieder. Als O-Töne wurden dies wiederum den MitarbeiterInnen des Zahnärztlichen Dienstes zurückgespiegelt. Dies entspricht in keiner Weise einer breit angelegten Erhebung oder quantitativen Befragung - dennoch hat es großen Effekt. Nur wenige, aber “echte”, Stimmen haben bereits eine völlig neue Perspektive auf den Service mit sich gebracht und dafür sensibilisiert, dass die eigenen Annahmen völlig falsch sein können."
