--- a/src/modules/05.md
+++ b/src/modules/05.md
@@ -2,7 +2,7 @@
 title: Erfahrungsschatz nutzen, Spielräume erkunden
 abstract: Welche Anlässe gibt es, die dabei helfen können, Verwaltungsmitarbeiter:innen neue oder bisher ungenutzte Spielräume aufzuzeigen und eine Veränderung zu wagen.
 example: "Der Bauhof der Stadt Herrenberg hat mit Hilfe der Hochschule für Öffentliche Verwaltung und Finanzen Ludwigsburg agiles, bürgerzentrietres und selbstverwaltetes Arbeiten eingeführt. In moderierten Verfahren und dank erprobter Methoden sowie der stetigen Evaluation des IST-Zustands konnte dieses für Verwaltung sehr ungewöhnliche Arbeitsprinzip umgesetzt werden. Die Mitarbeiter:innenzufriedenheit ist sehr groß und die neu eingeführten Maßnahmen werden in der Stadtverwaltung weiter ausgeweitet."
-hero_image_url: url
+hero_image_url: /assets/images/modules/01_hero.png
 hero_image_alt: Bild mit Menschen
 example_image_url: url
 example_image_alt: Bild mit irgendwas
