--- a/src/modules/07.md
+++ b/src/modules/07.md
@@ -2,7 +2,7 @@
 title: Prototyping
 abstract: Wir räumen mit einigen Vorurteilen auf, die oftmals gegen die Methode Prototyping gehegt werden und erläutern ihren Mehrwert.
 example: "Der Industriedesigner Doug Dietz gestaltete in einem \"klassischen\" Design Thinking Prozess (nutzerorientiert und in Prototypen entwickelt) ein MRT-Gerät für Kinder. Aus eigener Erfahrung wusste er, wie beängstigend diese Untersuchung für Kinder sein kann und das sie in vielen Fällen deswegen abgebrochen werden muss. Er entwickelte die “Adventure Series” die aus einem normalen MRT ein Piratenschiff oder eine Rakete macht und den Kindern eine spielerische “Reise” ermöglicht. Die Abbruchraten der Untersuchung sind in diesen Geräten wesentlich geringer."
-hero_image_url: url
+hero_image_url: /assets/images/modules/01_hero.png
 hero_image_alt: Bild mit Menschen
 example_image_url: url
 example_image_alt: Bild mit irgendwas
