fix(home): Fix link to first module

--- a/src/modules/01.md
+++ b/src/modules/01.md
@@ -1,6 +1,6 @@
 ---
 module_number: '01'
-title: Service Design und Nutzer&shy;orientierung
+title: Service Design und Nutzerorientierung
 abstract: Service Design erzeugt gute Angebote, die Stress für Mitarbeiter:innen reduzieren, Geld sparen und Ressourcen freisetzen.
 hero_image_url: /assets/images/modules/01_hero.png
 hero_image_alt: Menschen, die sich an den Händen fassen und Objekte austauschen
