feat(SAMS-42): Create social image (file in sketch) and apply to pages

--- a/src/modules/02.md
+++ b/src/modules/02.md
@@ -1,5 +1,8 @@
 ---
 title: Die Nutzer:innen&shy;perspektive
+socialMediaImagePath: /assets/images/modules/02-social-image.webp
+socialMediaImageType: image/webp
+socialMediaImageAlt: Modul 2 “Nutzer:innenperspektive”
 abstract: Wir erläutern die Idee des Perspektivwechsel hin zu Nutzer:innen und die Gründe, warum dies oft nicht berücksichtigt wird.
 example: "Die bekannte Designagentur IDEO wird beauftragt ein Tablet für ein Krankenhaus zu entwickeln, mit dem Patientendaten aufgenommen werden können. IDEO beobachtet Krankenhausmitarbeiter:innen im Kontakt mit den Patient:innen. Was sie sehen ist, dass diese zur Beruhigung die Hand ihrer Patient:innen halten - und damit nicht in der Lage wären beide Hände zur Bedingungen eines Tablets zu nutzen. Sie entwickeln stattdessen ein kleineres Gerät, das mit einer Hand bedient werden kann. Zwei zentrale Methoden des Service Design wirken hier: Ergebnisoffenheit und Beobachtung der Nutzer:innen. Ohne die Beobachtung der gegebenen Situation, wäre ein weniger sinnvolles, auf einer Fehlannahme basierendes Produkt (weiter-)entwickelt worden."
 hero_image_url: /assets/images/modules/01_hero.png
