--- a/src/modules/01.md
+++ b/src/modules/01.md
@@ -1,5 +1,8 @@
 ---
 title: Service Design und Nutzerorientierung
+socialMediaImagePath: /assets/images/modules/01-social-image.webp
+socialMediaImageType: image/webp
+socialMediaImageAlt: Modul 1 “Service Design und Nutzerorientierung”
 abstract: Service Design erzeugt gute Angebote, die Stress für Mitarbeiter:innen reduzieren, Geld sparen und Ressourcen freisetzen.
 hero_image_url: /assets/images/modules/01_hero.png
 hero_image_alt: Menschen, die sich an den Händen fassen und Objekte austauschen
