chore: Fix multiplw a11y issues and activate error in gh action

--- a/src/modules/01.md
+++ b/src/modules/01.md
@@ -1,11 +1,13 @@
 ---
 title: Service Design und Nutzerorientierung
 abstract: Service Design erzeugt gute Angebote, die Stress für Mitarbeiter:innen reduzieren, Geld sparen und Ressourcen freisetzen.
-hero_image_url: /assets/images/modules/01_hero.png
+hero_image_url: /assets/images/modules/01_hero.webp
 hero_image_alt: Menschen, die sich an den Händen fassen und Objekte austauschen
 example: Sicher kennen viele Menschen das Bild einer Behörden, die der angebotenen Dienstleistung mit Hinweisen in Text und Bild, Türschildern und laminierten Informationen auf die Sprünge helfen muss. Diese besagen, welchen Weg man zu gehen hat, wann man wo klopfen darf, welche Unterlagen bereitgehalten werden müssen, womit man hier völlig falsch ist. Das alles sind Beweise für eine schlecht organisierte Dienstleistung. Ihre Schwachstellen erzeugt Stress bei Mitarbeiter:innen, die offensichtlich stets ähnliche “unangebrachte” Fragen beantworten müssen und “falsches” Verhalten ihrer Nutzer:innen zu verhindern suchen. Das Problem ist, dass der “Fehler” auch nicht bei den Nutzer:innen liegt, sondern im Service selbst - dort aber selten gesucht wird.
-example_image_url: /assets/images/modules/01_example.png
+example_image_url: /assets/images/modules/01_example.webp
 example_image_alt: Drei Hände und ein Smartphone
+example_image_width: 366
+example_image_height: 354
 methods:
   - 
     title: Customer Journey
