--- a/src/modules/08.md
+++ b/src/modules/08.md
@@ -2,7 +2,7 @@
 title: Innovations&shy;projekte präsentieren
 abstract: Wir geben Hinweise, die helfen können Innovationsprojekte in der eigenen Abteilung oder im Team oder “nach oben” zu vermitteln und so den Ansatz des Agilen und nutzerzentrierten Arbeitens zu streuen.
 example: "Im Service Design Prozess des Zahnärztlichen Dienstes Berlin Neukölln bestand die dankbare Möglichkeit, neue Räume zu beziehen und eine “weiße Wand” bespielen zu dürfen. Ein einfaches Architekturmodell und farbige Ausdrucke möglicher Wandbemalungen (es ist eine Dienstleistung für Kinder) half der Umsetzung auf die Sprünge: Das Modell wurde dem Bezirksamt Neukölln gegeben und bis zum Stadtrat “weitergereicht”, der begeistert seine finanzielle Unterstützung zusagte."
-hero_image_url: /assets/images/modules/01_hero.png
+hero_image_url: /assets/images/modules/01_hero.webp
 hero_image_alt: Bild mit Menschen
 example_image_url: url
 example_image_alt: Bild mit irgendwas
