update content in modules

--- a/src/modules/02.md
+++ b/src/modules/02.md
@@ -1,7 +1,9 @@
 ---
 title: Die Nutzer:innen&shy;perspektive
 abstract: Wir erläutern die Idee des Perspektivwechsel hin zu Nutzer:innen und die Gründe, warum dies oft nicht berücksichtigt wird.
-example: "Die bekannte Designagentur IDEO wird beauftragt ein Tablet für ein Krankenhaus zu entwickeln, mit dem Patientendaten aufgenommen werden können. IDEO beobachtet Krankenhausmitarbeiter:innen im Kontakt mit den Patient:innen. Was sie sehen ist, dass diese zur Beruhigung die Hand ihrer Patient:innen halten - und damit nicht in der Lage wären beide Hände zur Bedingungen eines Tablets zu nutzen. Sie entwickeln stattdessen ein kleineres Gerät, das mit einer Hand bedient werden kann. Zwei zentrale Methoden des Service Design wirken hier: Ergebnisoffenheit und Beobachtung der Nutzer:innen. Ohne die Beobachtung der gegebenen Situation, wäre ein weniger sinnvolles, auf einer Fehlannahme basierendes Produkt (weiter-)entwickelt worden."
+example: "Die bekannte Designagentur IDEO wird beauftragt ein Tablet für ein Krankenhaus zu entwickeln, mit dem Patientendaten aufgenommen werden können. IDEO beobachtet Krankenhausmitarbeiter:innen im Kontakt mit den Patient:innen. Was sie sehen ist, dass diese zur Beruhigung die Hand ihrer Patient:innen halten - und damit nicht in der Lage wären beide Hände zur Bedienung eines Tablets zu nutzen. Sie entwickeln stattdessen ein kleineres Gerät, das mit einer Hand bedient werden kann.
+Zwei zentrale Methoden des Service Design wirken hier: Ergebnisoffenheit und Beobachtung der Nutzer:innen. Ohne die Beobachtung der gegebenen Situation, wäre ein weniger sinnvolles, auf einer Fehlannahme basierendes Produkt (weiter-)entwickelt worden.
+"
 hero_image_url: /assets/images/modules/01_hero.png
 hero_image_alt: Bild mit Menschen
 example_image_url: url
@@ -9,21 +11,22 @@ example_image_alt: Bild mit irgendwas
 methods:
   - 
     title: Shadowing
-    abstract: Methode zur Gewinnung einer weiteren Perspektive auf das Nutzererlebnis
+    abstract: Methode zur Gewinnung einer weiteren Perspektive auf das Nutzer:innenerlebnis
     description: "Das Shadowing ist vergleichbar der Teilnehmenden Beobachtung aus der Soziologie. Ohne Einzugreifen oder zu Kommentieren wird ein Vorgang beobachtet und dokumentiert. Durch die Außenperspektive ist es möglich sehr ganzheitlich auf kleine Reaktionen zu achten: ein Stirnrunzeln, ein Lächeln, ein Zögern. So wird eine sehr differenzierte Analyse eines Service ermöglicht."
     doc_path: /assets/docs/AB_Shadowing.pdf
 hypotheses:
   - 
     text: Du bist nicht die Nutzer 
   -
-    text: Es ist ein Unterschied, sich NutzerInnen vorzustellen oder sie zu befragen.
+    text: Es ist ein Unterschied, sich Nutzer:innen vorzustellen oder sie zu befragen
 ---
 
-Was bedeutet “nutzerorientiertes Arbeiten”? Wir haben doch immer die NutzerInnen im Sinn! Dies ist ein gängiges und sicher auch wahres Selbstverständnis bei privaten wie öffentlichen DienstleisterInnen. Doch auch wenn der ernstgemeinte Versuch unternommen wird, sich Nutzerinnen und deren Denk- und Handlungsweisen vorzustellen um einen angebotenen Service in deren Sinne aufzusetzen, entspricht dies leider zumeist nicht deren Verhaltensweisen.
+Was bedeutet “nutzer:innenorientiertes Arbeiten”? Wir haben doch immer die Nutzer:innen im Sinn! Dies ist ein gängiges und sicher auch wahres Selbstverständnis bei privaten wie öffentlichen Dienstleister:innen. Doch auch wenn der ernstgemeinte Versuch unternommen wird, sich Nutzer:innen und deren Denk- und Handlungsweisen vorzustellen um einen angebotenen Service in deren Sinne aufzusetzen, entspricht dies leider zumeist nicht deren Verhaltensweisen.
 Dies kann verschiedene Gründe haben:
 
 - Wir leben heute in einer sehr diversen Gesellschaft. Verwaltung ist der einzige Dienstleister, der jeden Mensch (!) in dieser Gesellschaft gleichermaßen ansprechen sollte: alt, jung, ledig, verwitwet, Familien, blind, Nicht-Muttersprachler:in, körperlich beeinträchtigt, Akademiker:in, Analphabet:in und viele mehr. Diese diversen Verhaltensweisen vorhersagen zu können, ist schlicht unmöglich.
 - Alle Menschen haben die Tendenz aus dem eigenen Arbeitsumfeld und dessen Routinen heraus zu denken - das ist völlig normal. Dennoch führt es dazu, vor allem aus einer Innenperspektive heraus zu handeln und die Außenperspektive mit “Scheuklappen” wahrzunehmen: Services werden also von der “falschen” Nutzung aus konzipiert.
-- Mitarbeiter:innen haben Vorwissen, was dazu führen kann, dass Fragen, die sich NutzerInnen stellen, nicht mehr mitgedacht werden. Die vermeintliche Lösung scheint auf der Hand zu liegen, geht aber leider am Nutzer:innenverhalten vorbei.
+- Mitarbeiter:innen haben Vorwissen, was dazu führen kann, dass Fragen, die sich Nutzer:innen stellen, nicht mehr mitgedacht werden. Die vermeintliche Lösung scheint auf der Hand zu liegen, geht aber leider am Nutzer:innenverhalten vorbei.
 
-Das Schöne ist: Es ist effizienter und freudvoller, NutzerInnen einzubinden und mit ihrem Know-How eine Dienstleistung aufzusetzen, als später nachzujustieren und den mit unzulänglichen Services einhergehenden Stress für Mitarbeiter:innen aufzufangen.
+Das Schöne ist: Es ist effizienter und freudvoller, Nutzer:innen einzubinden und mit ihrem Know-How eine Dienstleistung aufzusetzen, als später nachzujustieren und den mit unzulänglichen Services einhergehenden Stress für Mitarbeiter:innen aufzufangen.
+
