refactor: Update paths to documents in 03 and 07

--- a/src/modules/07.md
+++ b/src/modules/07.md
@@ -14,7 +14,7 @@ methods:
     title: Papier-Prototyp
     abstract:
     description: "Man benötigt ein A4-Papier, faltet es einmal längs und zweimal quer, so das 6 gleiche Felder entstehen. In jedes Feld zeichnet man einen Rahmen für ein Bild und einige darunter stehende Textzeilen. Ein sogenanntes Storyboard ist entstanden, das die erste Idee zum Ablauf einer Dienstleistung in Bild und Text erfassen kann. Der Vorteil des Storyboards im Vergleich zu einer rein textlichen Beschreibung liegt in der Ergänzung der visuellen Ebene. Sie ist die Hauptebene, der Text ergänzt die Bilder “nur” und ermöglicht so die niedrigschwelligere Dokumentation einer Idee."
-    doc_path: /assets/docs/AB_Shadowing.pdf # TODO: fill in the real doc
+    doc_path: /assets/docs/AB_Prototyping_Storyboard_Desktop_und_Mobil.pdf
 further_reading:
   - 
     title: Service Design im Gesundheitswesen
