feat: provide image alt's for example illustrations

--- a/src/modules/04.md
+++ b/src/modules/04.md
@@ -5,10 +5,7 @@ socialMediaImageType: image/webp
 socialMediaImageAlt: Modul 4 “Nutzer:innenbefragung”
 abstract: Wir sprechen in Kürze über die Hemmungen und die fehlenden Rahmenbedingungen zur Durchführung von Nutzer:innenbefragung - und den Ertrag, den sie erbringen können.
 example: "Während eines Service Design Prozesses mit dem zahnärztlichen Dienst Berlin Neukölln wurden die Schüler:innen, die diese Dienstleistung durchlaufen haben, zu ihrer Erfahrung befragt. Mit Hilfe von Bildmaterial gaben sie in ihren Worten einzelne Aktionen im Service wieder. Als O-Töne wurden dies wiederum den Mitarbeiter:innen des Zahnärztlichen Dienstes zurückgespiegelt. Dies entspricht in keiner Weise einer breit angelegten Erhebung oder quantitativen Befragung - dennoch hat es großen Effekt. Nur wenige, aber “echte”, Stimmen haben bereits eine völlig neue Perspektive auf den Service mit sich gebracht und dafür sensibilisiert, dass die eigenen Annahmen völlig falsch sein können."
-hero_image_url: /assets/images/modules/01_hero.webp
-hero_image_alt: Bild mit Menschen
-example_image_url: url
-example_image_alt: Bild mit irgendwas
+example_image_alt: Eine Zahnbürste und zwei Sprechblasen
 further_reading:
   - 
     title: Zahnärztlicher Dienst Berlin Neukölln
