chore: bring back placeholder hero illustrations
Will be removed in #27

--- a/src/modules/08.md
+++ b/src/modules/08.md
@@ -4,6 +4,8 @@ socialMediaImagePath: /assets/images/modules/08-social-image.webp
 socialMediaImageType: image/webp
 socialMediaImageAlt: Modul 8 “Innovationsprojekte präsentieren”
 abstract: Wir geben Hinweise, die helfen können Innovationsprojekte in der eigenen Abteilung oder im Team oder “nach oben” zu vermitteln und so den Ansatz des agilen und nutzer:innenzentrierten Arbeitens zu streuen.
+hero_image_url: /assets/images/modules/01_hero.webp
+hero_image_alt: Menschen, die sich an den Händen fassen und Objekte austauschen
 example: "Im Service Design Prozess des Zahnärztlichen Dienstes Berlin Neukölln bestand die dankbare Möglichkeit, neue Räume zu beziehen und eine “weiße Wand” bespielen zu dürfen. Ein einfaches Architekturmodell und farbige Ausdrucke möglicher Wandbemalungen (es ist eine Dienstleistung für Kinder) half der Umsetzung auf die Sprünge: Das Modell wurde dem Bezirksamt Neukölln gegeben und bis zum Stadtrat “weitergereicht”, der begeistert seine finanzielle Unterstützung zusagte."
 further_reading:
   - 
