--- a/src/modules/05.md
+++ b/src/modules/05.md
@@ -4,6 +4,8 @@ socialMediaImagePath: /assets/images/modules/05-social-image.webp
 socialMediaImageType: image/webp
 socialMediaImageAlt: Modul 5 “Erfahrungsschatz nutzen, Spielräume erkunden”
 abstract: Welche Anlässe gibt es, die dabei helfen können, Verwaltungsmitarbeiter:innen neue oder bisher ungenutzte Spielräume aufzuzeigen und eine Veränderung zu wagen.
+hero_image_url: /assets/images/modules/01_hero.webp
+hero_image_alt: Menschen, die sich an den Händen fassen und Objekte austauschen
 example: "Der Bauhof der Stadt Herrenberg hat mit Hilfe der Hochschule für Öffentliche Verwaltung und Finanzen Ludwigsburg agiles, bürgerzentrietres und selbstverwaltetes Arbeiten eingeführt. In moderierten Verfahren und dank erprobter Methoden sowie der stetigen Evaluation des IST-Zustands konnte dieses für Verwaltung sehr ungewöhnliche Arbeitsprinzip umgesetzt werden. Die Mitarbeiter:innenzufriedenheit ist sehr groß und die neu eingeführten Maßnahmen werden in der Stadtverwaltung weiter ausgeweitet."
 example_image_alt: Eine Person pickt Müll vom Boden und legt ihn in einen Sack
 further_reading:
