feat: add hero_image_alt's

--- a/src/modules/02.md
+++ b/src/modules/02.md
@@ -7,8 +7,7 @@ abstract: Wir erläutern die Idee des Perspektivwechsel hin zu Nutzer:innen und 
 example: "Die bekannte Designagentur IDEO wird beauftragt ein Tablet für ein Krankenhaus zu entwickeln, mit dem Patientendaten aufgenommen werden können. IDEO beobachtet Krankenhausmitarbeiter:innen im Kontakt mit den Patient:innen. Was sie sehen ist, dass diese zur Beruhigung die Hand ihrer Patient:innen halten - und damit nicht in der Lage wären beide Hände zur Bedienung eines Tablets zu nutzen. Sie entwickeln stattdessen ein kleineres Gerät, das mit einer Hand bedient werden kann.
 Zwei zentrale Methoden des Service Design wirken hier: Ergebnisoffenheit und Beobachtung der Nutzer:innen. Ohne die Beobachtung der gegebenen Situation, wäre ein weniger sinnvolles, auf einer Fehlannahme basierendes Produkt (weiter-)entwickelt worden.
 "
-hero_image_url: /assets/images/modules/01_hero.webp
-hero_image_alt: Bild mit Menschen
+hero_image_alt: Menschen schauen zusammen durch eine große Brille, die die Stadt erleuchtet
 example_image_url: url
 example_image_alt: Bild mit irgendwas
 methods:
