feat: Add method Spielraeume in module 05

--- a/src/modules/05.md
+++ b/src/modules/05.md
@@ -9,6 +9,12 @@ hero_image_url: /assets/images/modules/01_hero.webp
 hero_image_alt: Bild mit Menschen
 example_image_url: url
 example_image_alt: Bild mit irgendwas
+methods:
+  - 
+    title: Spielräume
+    abstract:
+    description: "Die Methode “Spielräume” ist im Endeffekt nur ein Anlass und Geländer, vorhandene Beschränkungen und Freiräume überhaupt zu bedenken und in Augenschein zu nehmen. Es hilft dabei, unterschiedliche Bereiche der organisationalen Tätigkeit zu betrachten und einmal - am besten im Team - analytisch über den Status Quo und potenzielle Optionen nachzudenken. Der interdisziplinäre Austausch kann hier sehr hilfreich sein, denn vielleicht wurde in einer Abteilung oder auch nur in einem Einzelfall schon einmal ein Spielraum erkundet, der übertragbar ist."
+    doc_path: /assets/docs/AB_Spielraueme_erkunden.pdf
 further_reading:
   - 
     title: Videoidentifikation Wiesbaden
