fix: add Personas PDF to correct method

--- a/src/modules/02.md
+++ b/src/modules/02.md
@@ -15,6 +15,11 @@ methods:
     abstract: Methode zur Gewinnung einer weiteren Perspektive auf das Nutzer:innenerlebnis
     description: "Das Shadowing ist vergleichbar der Teilnehmenden Beobachtung aus der Soziologie. Ohne Einzugreifen oder zu Kommentieren wird ein Vorgang beobachtet und dokumentiert. Durch die Außenperspektive ist es möglich sehr ganzheitlich auf kleine Reaktionen zu achten: ein Stirnrunzeln, ein Lächeln, ein Zögern. So wird eine sehr differenzierte Analyse eines Service ermöglicht."
     doc_path: /assets/docs/AB_Shadowing.pdf
+  - 
+    title: Personas
+    abstract: Fiktiven Personen werden Bedürfnisse, Fähigkeiten und Ziele zugeordnet
+    description: "Die Entwicklung einer Persona ist eine Methode, die helfen soll eine breite Masse potenzieller Nutzer:innen spezifischer betrachten zu können. Sie sind fiktive Personen, denen aber wie „echten“ Nutzer:innen Bedürfnisse, Fähigkeiten und Ziele zugeordnet werden"
+    doc_path: /assets/docs/AB_Personas.pdf
 hypotheses:
   - 
     text: Du bist nicht die Nutzer 
