fix(SAMS-73): break that long German word if necessary

--- a/src/modules/06.md
+++ b/src/modules/06.md
@@ -1,5 +1,5 @@
 ---
-title: Nutzer:innenzentrierte Sprache
+title: Nutzer:innen&shy;zentrierte Sprache
 socialMediaImagePath: /assets/images/modules/06-social-image.webp
 socialMediaImageType: image/webp
 socialMediaImageAlt: Modul 6 “Nutzerzentrierte Sprache”
