chore: display Service Blueprint but without PDF
PDF doesn't exist, but stakeholders want the method there anyway

--- a/src/modules/03.md
+++ b/src/modules/03.md
@@ -7,12 +7,11 @@ abstract: Wie und an welcher Stelle lassen sich die verschiedenen bereits analys
 example: "Eine Situation, die wir vielleicht alle nachvollziehen können, ist der Besuch von Ärzt:innen oder Einrichtungen des Gesundheitswesens. Aus Gründen des Datenschutzes war oder ist es lange Zeit nicht möglich gewesen, Daten innerhalb des Gesundheitssystems auszutauschen. Für Patient:innen bedeutet das, immer wieder gleiche Fragen zu beantworten, gleiche oder ähnliche Formulare auszufüllen und sich “gefühlt” immer am Beginn einer Behandlung zu befinden. Die “unsichtbaren” Abläufe im Hintergrund sind in diesem Fall schlicht nicht vorhanden, es gibt meist keinen Austausch von Daten. Für das Nutzer:innenerlebnis wäre dies aber in jeder Hinsicht sehr erleichternd."
 hero_image_alt: Licht scheint aus einem Gebäude, auf das Menschen zulaufen
 example_image_alt: Zwei Gesundheitskarten
-#methods:
-#  - 
-#    title: Service Blueprint
-#    abstract:
-#    description: "Der Blueprint bildet die Interaktion mit den Nutzer:innen und die Schnittstellen zur Organisation gleichzeitig ab. Dadurch kann die Sichtweise der Nutzer:innen mit der eines Dienstleisters kombiniert dargestellt werden. Neben den Handlungen der Nutzer:innen und der Verwaltungsmitarbeiter:innen, sowie der Berührungspunkte mit einem Service, die wir bereits in der Customer Journey und dem Shadowing ermittelt haben, werden alle “unsichtbaren” Aktivitäten im Hintergrund ergänzt. Dies sind einerseits alle Aktionen, die eine Organisation im Hintergrund durchführt - die Ablage von Informationen - welche für die Nutzer:innen nicht sichtbar sind wie auch unterstützende Prozesse für den Dienstleistungsprozess, zum Beispiel eine Terminerinnerung."
-#    doc_path: /assets/docs/AB_Personas.pdf
+methods:
+  - 
+    title: Service Blueprint
+    abstract:
+    description: "Der Blueprint bildet die Interaktion mit den Nutzer:innen und die Schnittstellen zur Organisation gleichzeitig ab. Dadurch kann die Sichtweise der Nutzer:innen mit der eines Dienstleisters kombiniert dargestellt werden. Neben den Handlungen der Nutzer:innen und der Verwaltungsmitarbeiter:innen, sowie der Berührungspunkte mit einem Service, die wir bereits in der Customer Journey und dem Shadowing ermittelt haben, werden alle “unsichtbaren” Aktivitäten im Hintergrund ergänzt. Dies sind einerseits alle Aktionen, die eine Organisation im Hintergrund durchführt - die Ablage von Informationen - welche für die Nutzer:innen nicht sichtbar sind wie auch unterstützende Prozesse für den Dienstleistungsprozess, zum Beispiel eine Terminerinnerung."
 ---
 
 Die funktionalen und emotionalen Bedürfnisse von Nutzer:innen und Verwaltungsmitarbeiter:innen sind oft recht unterschiedlich - selbst wenn das Bedürfnis nach einem guten Service bei beiden Seiten vorhanden ist. Das ist nicht nur in Verwaltung so, wir erleben das täglich, beispielsweise im Supermarkt: Wenn statt des Lieblingsmüslis im Regal nur Leere herrscht, sind wir enttäuscht. Wenn wir uns allerdings durch viele Mitarbeiter:innen mit Rollwägen pressen müssen, die Regale einräumen, sind wir genervt. Wenn unsere Nichte oder unser Bruder am Samstag bis 22.00 Uhr im Supermarkt arbeiten müssen, um die Regale einzuräumen, ohne Kund:innen zu stören, sind wir entrüstet. 
