feat(SAMS-86): use Twitter-optimized images

--- a/src/modules/01.md
+++ b/src/modules/01.md
@@ -2,7 +2,8 @@
 title: Service Design und Nutzer:innen&shy;orientierung
 socialMediaImagePath: /assets/images/modules/01-social-image.webp
 socialMediaImageType: image/webp
-socialMediaImageAlt: Modul 1 “Service Design und Nutzerorientierung”
+socialMediaImageAlt: Modul 1 “Service Design und Nutzer:innenorientierung”
+twitterImagePath: /assets/images/modules/01-social-image-twitter.webp
 abstract: Service Design erzeugt gute Angebote, die Stress für Mitarbeiter:innen reduzieren, Geld sparen und Ressourcen freisetzen.
 hero_image_url: /assets/images/modules/01_hero.webp
 hero_image_alt: Menschen, die sich an den Händen fassen und Objekte austauschen
