--- a/src/modules/03.md
+++ b/src/modules/03.md
@@ -3,6 +3,7 @@ title: Unterschiedliche Perspektiven zusammenführen
 socialMediaImagePath: /assets/images/modules/03-social-image.webp
 socialMediaImageType: image/webp
 socialMediaImageAlt: Modul 3 “Unterschiedliche Perspektiven zusammenführen”
+twitterImagePath: /assets/images/modules/03-social-image-twitter.webp
 abstract: Wie und an welcher Stelle lassen sich die verschiedenen bereits analysierten Ebenen zusammenführen, um eine ganzheitliche und schlüssige Dienstleistung zu entwickeln?
 example: "Eine Situation, die wir vielleicht alle nachvollziehen können, ist der Besuch von Ärzt:innen oder Einrichtungen des Gesundheitswesens. Aus Gründen des Datenschutzes war oder ist es lange Zeit nicht möglich gewesen, Daten innerhalb des Gesundheitssystems auszutauschen. Für Patient:innen bedeutet das, immer wieder gleiche Fragen zu beantworten, gleiche oder ähnliche Formulare auszufüllen und sich “gefühlt” immer am Beginn einer Behandlung zu befinden. Die “unsichtbaren” Abläufe im Hintergrund sind in diesem Fall schlicht nicht vorhanden, es gibt meist keinen Austausch von Daten. Für das Nutzer:innenerlebnis wäre dies aber in jeder Hinsicht sehr erleichternd."
 hero_image_alt: Licht scheint aus einem Gebäude, auf das Menschen zulaufen
