--- a/src/modules/06.md
+++ b/src/modules/06.md
@@ -2,7 +2,8 @@
 title: Nutzer:innen&shy;zentrierte Sprache
 socialMediaImagePath: /assets/images/modules/06-social-image.webp
 socialMediaImageType: image/webp
-socialMediaImageAlt: Modul 6 “Nutzerzentrierte Sprache”
+socialMediaImageAlt: Modul 6 “Nutzer:innenzentrierte Sprache”
+twitterImagePath: /assets/images/modules/06-social-image-twitter.webp
 abstract: Ein kurzer Exkurs zur langen Geschichte und dennoch meist fehlenden Umsetzung der eigentlich so wichtigen nutzer:innenzentrierten Sprache.
 example: "Designer Thomas Weyres hat in einem Vortrag für die re:publica das Hartz IV-Antragsverfahren aufgegriffen und folgende Überlegung angestellt: “Wie sollte ein Antrag aufgebaut und gestaltet sein, der die Bedürfnisse des Antragstellers nach Orientierung, Verständlichkeit und Zeit- und Kosteneffizienz bei der Bearbeitung ernst nimmt – und der den Kontext, aus dem der Antrag gestellt wird, ernst nimmt?” Nachvollziehbar und empathisch gestaltet er das bestehende Antragsverfahren um und präsentiert eine bestechende nutzer:innenfreundliche Alternative."
 hero_image_alt: Eine Person flüstert einer anderen Person etwas
